--- a/src/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer/Components/Pages/Home.razor
+++ b/src/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer/Components/Pages/Home.razor
@@ -5,3 +5,6 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<!-- Add a Mudblazor Button and make it pretty-->
+<MudButton Color="Color.Primary" Variant="Variant.Filled">Click Me</MudButton>
