--- a/src/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer/Components/App.razor
+++ b/src/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer/Components/App.razor
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="InteractiveAuto" />
     <script src="_framework/blazor.web.js"></script>
 </body>
 
