--- a/src/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer/Components/Layout/NavMenu.razor
+++ b/src/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer/Components/Layout/NavMenu.razor
@@ -1,30 +1,19 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">DatabaseExplainer</a>
-    </div>
-</div>
+@rendermode InteractiveAuto
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
+<MudNavMenu>
+    <MudNavLink Href="/" Match="NavLinkMatch.All">
+        <MudIcon Icon="@Icons.Material.Outlined.Home" /> Home
+    </MudNavLink>
+    <MudNavLink Href="/explain" Match="NavLinkMatch.Prefix">
+        <MudIcon Icon="@Icons.Material.Outlined.StarOutline" /> Explain
+    </MudNavLink>
+    <MudNavLink Href="/weather" Match="NavLinkMatch.Prefix">
+        <MudIcon Icon="@Icons.Material.Outlined.StarOutline" /> Weather
+    </MudNavLink>
+    <MudNavLink Href="/counter" Match="NavLinkMatch.Prefix">
+        <MudIcon Icon="@Icons.Material.Outlined.StarOutline" /> Counter
+    </MudNavLink>
+    <MudNavLink Href="/settings" Match="NavLinkMatch.Prefix" Style="position: fixed; bottom: 0;">
+        <MudIcon Icon="@Icons.Material.Outlined.Settings" /> Settings
+    </MudNavLink>
+</MudNavMenu>
