--- a/src/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer/Components/Pages/Home.razor
+++ b/src/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer/Components/Pages/Home.razor
@@ -2,9 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Database Explainer</h1>
 
-Welcome to your new app.
-
-<!-- Add a Mudblazor Button and make it pretty-->
-<MudButton Color="Color.Primary" Variant="Variant.Filled">Click Me</MudButton>
+A tool that uses Generative AI to explain the function of entities in a relational database.
